Fix h2 text-align on Plans#show, add new tab feature to Github user link

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,7 +33,7 @@ form {
   margin-right: 30%;
 }
 
-h2 {
+h2.paytone-one {
   text-align: center;
 }
 
